@@ -16,7 +16,6 @@
  */
 package org.graylog2.lookup;
 
-import com.google.common.collect.ImmutableList;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -26,6 +25,7 @@ import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.never;
@@ -36,7 +36,7 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.WARN)
 @SuppressWarnings("ConstantConditions")
-public class LookupTableServiceTest {
+class LookupTableServiceTest {
 
     @Mock
     private LookupTableService service;
@@ -45,14 +45,14 @@ public class LookupTableServiceTest {
     private LookupTableService.Function function;
 
     @BeforeEach
-    public void setUp() throws Exception {
+    void setUp() {
         this.function = new LookupTableService.Function(service, "table");
 
         when(service.getTable("table")).thenReturn(table);
     }
 
     @Test
-    public void functionSetValue() {
+    void functionSetValue() {
         function.setValue("key", "value");
 
         assertThatThrownBy(() -> function.setValue("key", null)).isInstanceOf(NullPointerException.class);
@@ -66,7 +66,7 @@ public class LookupTableServiceTest {
     }
 
     @Test
-    public void functionSetValueWithTtl() {
+    void functionSetValueWithTtl() {
         function.setValueWithTtl("key", "value", 500L);
 
         assertThatThrownBy(() -> function.setValueWithTtl("key", null, 500L)).isInstanceOf(NullPointerException.class);
@@ -80,79 +80,79 @@ public class LookupTableServiceTest {
     }
 
     @Test
-    public void functionSetStringList() {
-        function.setStringList("key", ImmutableList.of("hello", "world"));
+    void functionSetStringList() {
+        function.setStringList("key", List.of("hello", "world"));
         function.setStringList("key", Arrays.asList("with", "empty", "", "and", null));
 
         assertThatThrownBy(() -> function.setStringList("key", null)).isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> function.setStringList(null, ImmutableList.of("none"))).isInstanceOf(NullPointerException.class);
+        assertThatThrownBy(() -> function.setStringList(null, List.of("none"))).isInstanceOf(NullPointerException.class);
         assertThatThrownBy(() -> function.setStringList(null, null)).isInstanceOf(NullPointerException.class);
 
-        verify(table, times(1)).setStringList("key", ImmutableList.of("hello", "world"));
-        verify(table, times(1)).setStringList("key", ImmutableList.of("with", "empty", "and"));
+        verify(table, times(1)).setStringList("key", List.of("hello", "world"));
+        verify(table, times(1)).setStringList("key", List.of("with", "empty", "and"));
 
         verify(table, never()).setStringList("key", null);
-        verify(table, never()).setStringList(null, ImmutableList.of("none"));
+        verify(table, never()).setStringList(null, List.of("none"));
         verify(table, never()).setStringList(null, null);
         verify(table, never()).setStringList("key", Arrays.asList("with", "empty", "", "and", null));
     }
 
     @Test
-    public void functionSetStringListWithTtl() {
-        function.setStringListWithTtl("key", ImmutableList.of("hello", "world"), 500L);
+    void functionSetStringListWithTtl() {
+        function.setStringListWithTtl("key", List.of("hello", "world"), 500L);
         function.setStringListWithTtl("key", Arrays.asList("with", "empty", "", "and", null), 500L);
 
         assertThatThrownBy(() -> function.setStringListWithTtl("key", null, 500L)).isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> function.setStringListWithTtl(null, ImmutableList.of("none"), 500L)).isInstanceOf(NullPointerException.class);
+        assertThatThrownBy(() -> function.setStringListWithTtl(null, List.of("none"), 500L)).isInstanceOf(NullPointerException.class);
         assertThatThrownBy(() -> function.setStringListWithTtl(null, null, 500L)).isInstanceOf(NullPointerException.class);
 
-        verify(table, times(1)).setStringListWithTtl("key", ImmutableList.of("hello", "world"), 500L);
-        verify(table, times(1)).setStringListWithTtl("key", ImmutableList.of("with", "empty", "and"), 500L);
+        verify(table, times(1)).setStringListWithTtl("key", List.of("hello", "world"), 500L);
+        verify(table, times(1)).setStringListWithTtl("key", List.of("with", "empty", "and"), 500L);
 
         verify(table, never()).setStringListWithTtl("key", null, 500L);
-        verify(table, never()).setStringListWithTtl(null, ImmutableList.of("none"), 500L);
+        verify(table, never()).setStringListWithTtl(null, List.of("none"), 500L);
         verify(table, never()).setStringListWithTtl(null, null, 500L);
         verify(table, never()).setStringListWithTtl("key", Arrays.asList("with", "empty", "", "and", null), 500L);
     }
 
     @Test
-    public void functionAddStringList() {
-        function.addStringList("key", ImmutableList.of("hello", "world"), false);
+    void functionAddStringList() {
+        function.addStringList("key", List.of("hello", "world"), false);
         function.addStringList("key", Arrays.asList("with", "empty", "", "and", null), false);
 
         assertThatThrownBy(() -> function.addStringList("key", null, false)).isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> function.addStringList(null, ImmutableList.of("none"), false)).isInstanceOf(NullPointerException.class);
+        assertThatThrownBy(() -> function.addStringList(null, List.of("none"), false)).isInstanceOf(NullPointerException.class);
         assertThatThrownBy(() -> function.addStringList(null, null, false)).isInstanceOf(NullPointerException.class);
 
-        verify(table, times(1)).addStringList("key", ImmutableList.of("hello", "world"), false);
-        verify(table, times(1)).addStringList("key", ImmutableList.of("with", "empty", "and"), false);
+        verify(table, times(1)).addStringList("key", List.of("hello", "world"), false);
+        verify(table, times(1)).addStringList("key", List.of("with", "empty", "and"), false);
 
         verify(table, never()).addStringList("key", null, false);
-        verify(table, never()).addStringList(null, ImmutableList.of("none"), false);
+        verify(table, never()).addStringList(null, List.of("none"), false);
         verify(table, never()).addStringList(null, null, false);
         verify(table, never()).addStringList("key", Arrays.asList("with", "empty", "", "and", null), false);
     }
 
     @Test
-    public void functionRemoveStringList() {
-        function.removeStringList("key", ImmutableList.of("hello", "world"));
+    void functionRemoveStringList() {
+        function.removeStringList("key", List.of("hello", "world"));
         function.removeStringList("key", Arrays.asList("with", "empty", "", "and", null));
 
         assertThatThrownBy(() -> function.removeStringList("key", null)).isInstanceOf(NullPointerException.class);
-        assertThatThrownBy(() -> function.removeStringList(null, ImmutableList.of("none"))).isInstanceOf(NullPointerException.class);
+        assertThatThrownBy(() -> function.removeStringList(null, List.of("none"))).isInstanceOf(NullPointerException.class);
         assertThatThrownBy(() -> function.removeStringList(null, null)).isInstanceOf(NullPointerException.class);
 
-        verify(table, times(1)).removeStringList("key", ImmutableList.of("hello", "world"));
-        verify(table, times(1)).removeStringList("key", ImmutableList.of("with", "empty", "and"));
+        verify(table, times(1)).removeStringList("key", List.of("hello", "world"));
+        verify(table, times(1)).removeStringList("key", List.of("with", "empty", "and"));
 
         verify(table, never()).removeStringList("key", null);
-        verify(table, never()).removeStringList(null, ImmutableList.of("none"));
+        verify(table, never()).removeStringList(null, List.of("none"));
         verify(table, never()).removeStringList(null, null);
         verify(table, never()).removeStringList("key", Arrays.asList("with", "empty", "", "and", null));
     }
 
     @Test
-    public void functionClearKey() {
+    void functionClearKey() {
         function.clearKey("key");
 
         assertThatThrownBy(() -> function.clearKey(null)).isInstanceOf(NullPointerException.class);
@@ -162,7 +162,7 @@ public class LookupTableServiceTest {
     }
 
     @Test
-    public void functionAssignTtl() {
+    void functionAssignTtl() {
         function.assignTtl("key", 500L);
 
         assertThatThrownBy(() -> function.assignTtl(null, 500L)).isInstanceOf(NullPointerException.class);
